fake news distribution

--- a/templates/index.html
+++ b/templates/index.html
@@ -50,6 +50,10 @@
       </div>
     </div>
 
+    <!-- Fake News Distribution -->
+    <h2>Fake News Distribution</h2>
+    <div>{{ fake_news_plot | safe }}</div>
+
     <!-- Other Visualizations -->
     <h2>Distribution of Upvotes</h2>
     <div>{{ plot1 | safe }}</div>
